fixed AVG  not showing when changing temp format

--- a/scss/style.scss
+++ b/scss/style.scss
@@ -41,6 +41,23 @@ body,main {
                 justify-content: flex-start;
                 gap: 16px;
                 width: 33%;
+                #tempBtn {
+                    width: 20%;
+                    height: 2rem;
+                    font-size: 0.8rem;
+                    font-weight: bolder;
+                    border-radius: 12px;
+                    border: 3px #fff solid;
+                    color: #fff;
+                    background-color: transparent;
+                    transition: all 0.4s;
+                }
+                #tempBtn:hover {
+                    cursor: pointer;
+                    background: #F9F6EE;
+                    color: #000;
+                    font-weight: bold;
+                }
             }
             #location {
                 text-align: center;
